myparser/generated/MyGrammarParser.cpp

// Generated from /tmp/antlr_cpp_threads/myparser/grammar/MyGrammar.g4 by ANTLR 4.6


#include "MyGrammarListener.h"
#include "MyGrammarVisitor.h"

#include "MyGrammarParser.h"


using namespace antlrcpp;
using namespace myparser;
using namespace antlr4;

MyGrammarParser::MyGrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MyGrammarParser::~MyGrammarParser() {
  delete _interpreter;
}

std::string MyGrammarParser::getGrammarFileName() const {
  return "MyGrammar.g4";
}

const std::vector<std::string>& MyGrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MyGrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Rule_bindingContext ------------------------------------------------------------------

MyGrammarParser::Rule_bindingContext::Rule_bindingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyGrammarParser::IdentContext* MyGrammarParser::Rule_bindingContext::ident() {
  return getRuleContext<MyGrammarParser::IdentContext>(0);
}

tree::TerminalNode* MyGrammarParser::Rule_bindingContext::COLON() {
  return getToken(MyGrammarParser::COLON, 0);
}

tree::TerminalNode* MyGrammarParser::Rule_bindingContext::SEMI() {
  return getToken(MyGrammarParser::SEMI, 0);
}

tree::TerminalNode* MyGrammarParser::Rule_bindingContext::FRAGMENT() {
  return getToken(MyGrammarParser::FRAGMENT, 0);
}

MyGrammarParser::Rule_defContext* MyGrammarParser::Rule_bindingContext::rule_def() {
  return getRuleContext<MyGrammarParser::Rule_defContext>(0);
}

MyGrammarParser::RedirectContext* MyGrammarParser::Rule_bindingContext::redirect() {
  return getRuleContext<MyGrammarParser::RedirectContext>(0);
}


size_t MyGrammarParser::Rule_bindingContext::getRuleIndex() const {
  return MyGrammarParser::RuleRule_binding;
}

void MyGrammarParser::Rule_bindingContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_binding(this);
}

void MyGrammarParser::Rule_bindingContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_binding(this);
}


antlrcpp::Any MyGrammarParser::Rule_bindingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_binding(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::Rule_bindingContext* MyGrammarParser::rule_binding() {
  Rule_bindingContext *_localctx = _tracker.createInstance<Rule_bindingContext>(_ctx, getState());
  enterRule(_localctx, 0, MyGrammarParser::RuleRule_binding);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyGrammarParser::FRAGMENT) {
      setState(28);
      match(MyGrammarParser::FRAGMENT);
    }
    setState(31);
    ident();
    setState(32);
    match(MyGrammarParser::COLON);
    setState(34);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MyGrammarParser::COMMENT_BLOCK)
      | (1ULL << MyGrammarParser::TILDE)
      | (1ULL << MyGrammarParser::LPAREN)
      | (1ULL << MyGrammarParser::PIPE)
      | (1ULL << MyGrammarParser::POUND)
      | (1ULL << MyGrammarParser::DOT)
      | (1ULL << MyGrammarParser::TOKEN_IDENT)
      | (1ULL << MyGrammarParser::RULE_IDENT)
      | (1ULL << MyGrammarParser::STRING)
      | (1ULL << MyGrammarParser::SET_TOK))) != 0)) {
      setState(33);
      rule_def();
    }
    setState(37);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyGrammarParser::ARROW) {
      setState(36);
      redirect();
    }
    setState(39);
    match(MyGrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RedirectContext ------------------------------------------------------------------

MyGrammarParser::RedirectContext::RedirectContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyGrammarParser::RedirectContext::ARROW() {
  return getToken(MyGrammarParser::ARROW, 0);
}

tree::TerminalNode* MyGrammarParser::RedirectContext::CHANNEL() {
  return getToken(MyGrammarParser::CHANNEL, 0);
}

tree::TerminalNode* MyGrammarParser::RedirectContext::LPAREN() {
  return getToken(MyGrammarParser::LPAREN, 0);
}

tree::TerminalNode* MyGrammarParser::RedirectContext::TOKEN_IDENT() {
  return getToken(MyGrammarParser::TOKEN_IDENT, 0);
}

tree::TerminalNode* MyGrammarParser::RedirectContext::RPAREN() {
  return getToken(MyGrammarParser::RPAREN, 0);
}

tree::TerminalNode* MyGrammarParser::RedirectContext::SKIP_TOK() {
  return getToken(MyGrammarParser::SKIP_TOK, 0);
}


size_t MyGrammarParser::RedirectContext::getRuleIndex() const {
  return MyGrammarParser::RuleRedirect;
}

void MyGrammarParser::RedirectContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRedirect(this);
}

void MyGrammarParser::RedirectContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRedirect(this);
}


antlrcpp::Any MyGrammarParser::RedirectContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRedirect(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::RedirectContext* MyGrammarParser::redirect() {
  RedirectContext *_localctx = _tracker.createInstance<RedirectContext>(_ctx, getState());
  enterRule(_localctx, 2, MyGrammarParser::RuleRedirect);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    match(MyGrammarParser::ARROW);
    setState(47);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyGrammarParser::CHANNEL: {
        setState(42);
        match(MyGrammarParser::CHANNEL);
        setState(43);
        match(MyGrammarParser::LPAREN);
        setState(44);
        match(MyGrammarParser::TOKEN_IDENT);
        setState(45);
        match(MyGrammarParser::RPAREN);
        break;
      }

      case MyGrammarParser::SKIP_TOK: {
        setState(46);
        match(MyGrammarParser::SKIP_TOK);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rule_defContext ------------------------------------------------------------------

MyGrammarParser::Rule_defContext::Rule_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyGrammarParser::Rule_altContext *> MyGrammarParser::Rule_defContext::rule_alt() {
  return getRuleContexts<MyGrammarParser::Rule_altContext>();
}

MyGrammarParser::Rule_altContext* MyGrammarParser::Rule_defContext::rule_alt(size_t i) {
  return getRuleContext<MyGrammarParser::Rule_altContext>(i);
}

std::vector<tree::TerminalNode *> MyGrammarParser::Rule_defContext::PIPE() {
  return getTokens(MyGrammarParser::PIPE);
}

tree::TerminalNode* MyGrammarParser::Rule_defContext::PIPE(size_t i) {
  return getToken(MyGrammarParser::PIPE, i);
}


size_t MyGrammarParser::Rule_defContext::getRuleIndex() const {
  return MyGrammarParser::RuleRule_def;
}

void MyGrammarParser::Rule_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_def(this);
}

void MyGrammarParser::Rule_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_def(this);
}


antlrcpp::Any MyGrammarParser::Rule_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_def(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::Rule_defContext* MyGrammarParser::rule_def() {
  Rule_defContext *_localctx = _tracker.createInstance<Rule_defContext>(_ctx, getState());
  enterRule(_localctx, 4, MyGrammarParser::RuleRule_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    rule_alt();
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyGrammarParser::PIPE) {
      setState(50);
      match(MyGrammarParser::PIPE);
      setState(51);
      rule_alt();
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rule_altContext ------------------------------------------------------------------

MyGrammarParser::Rule_altContext::Rule_altContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyGrammarParser::Nonempty_altContext* MyGrammarParser::Rule_altContext::nonempty_alt() {
  return getRuleContext<MyGrammarParser::Nonempty_altContext>(0);
}

MyGrammarParser::Empty_altContext* MyGrammarParser::Rule_altContext::empty_alt() {
  return getRuleContext<MyGrammarParser::Empty_altContext>(0);
}

tree::TerminalNode* MyGrammarParser::Rule_altContext::PIPE() {
  return getToken(MyGrammarParser::PIPE, 0);
}


size_t MyGrammarParser::Rule_altContext::getRuleIndex() const {
  return MyGrammarParser::RuleRule_alt;
}

void MyGrammarParser::Rule_altContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_alt(this);
}

void MyGrammarParser::Rule_altContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_alt(this);
}


antlrcpp::Any MyGrammarParser::Rule_altContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_alt(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::Rule_altContext* MyGrammarParser::rule_alt() {
  Rule_altContext *_localctx = _tracker.createInstance<Rule_altContext>(_ctx, getState());
  enterRule(_localctx, 6, MyGrammarParser::RuleRule_alt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyGrammarParser::PIPE

    || _la == MyGrammarParser::POUND) {
      setState(57);
      empty_alt();
      setState(58);
      match(MyGrammarParser::PIPE);
    }
    setState(62);
    nonempty_alt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Empty_altContext ------------------------------------------------------------------

MyGrammarParser::Empty_altContext::Empty_altContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyGrammarParser::Empty_ruleContext* MyGrammarParser::Empty_altContext::empty_rule() {
  return getRuleContext<MyGrammarParser::Empty_ruleContext>(0);
}

MyGrammarParser::Alt_labelContext* MyGrammarParser::Empty_altContext::alt_label() {
  return getRuleContext<MyGrammarParser::Alt_labelContext>(0);
}


size_t MyGrammarParser::Empty_altContext::getRuleIndex() const {
  return MyGrammarParser::RuleEmpty_alt;
}

void MyGrammarParser::Empty_altContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEmpty_alt(this);
}

void MyGrammarParser::Empty_altContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEmpty_alt(this);
}


antlrcpp::Any MyGrammarParser::Empty_altContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitEmpty_alt(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::Empty_altContext* MyGrammarParser::empty_alt() {
  Empty_altContext *_localctx = _tracker.createInstance<Empty_altContext>(_ctx, getState());
  enterRule(_localctx, 8, MyGrammarParser::RuleEmpty_alt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    empty_rule();
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyGrammarParser::POUND) {
      setState(65);
      alt_label();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Nonempty_altContext ------------------------------------------------------------------

MyGrammarParser::Nonempty_altContext::Nonempty_altContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyGrammarParser::Rule_itemContext *> MyGrammarParser::Nonempty_altContext::rule_item() {
  return getRuleContexts<MyGrammarParser::Rule_itemContext>();
}

MyGrammarParser::Rule_itemContext* MyGrammarParser::Nonempty_altContext::rule_item(size_t i) {
  return getRuleContext<MyGrammarParser::Rule_itemContext>(i);
}

MyGrammarParser::Alt_labelContext* MyGrammarParser::Nonempty_altContext::alt_label() {
  return getRuleContext<MyGrammarParser::Alt_labelContext>(0);
}


size_t MyGrammarParser::Nonempty_altContext::getRuleIndex() const {
  return MyGrammarParser::RuleNonempty_alt;
}

void MyGrammarParser::Nonempty_altContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNonempty_alt(this);
}

void MyGrammarParser::Nonempty_altContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNonempty_alt(this);
}


antlrcpp::Any MyGrammarParser::Nonempty_altContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitNonempty_alt(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::Nonempty_altContext* MyGrammarParser::nonempty_alt() {
  Nonempty_altContext *_localctx = _tracker.createInstance<Nonempty_altContext>(_ctx, getState());
  enterRule(_localctx, 10, MyGrammarParser::RuleNonempty_alt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(68);
      rule_item(0);
      setState(71); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MyGrammarParser::COMMENT_BLOCK)
      | (1ULL << MyGrammarParser::TILDE)
      | (1ULL << MyGrammarParser::LPAREN)
      | (1ULL << MyGrammarParser::DOT)
      | (1ULL << MyGrammarParser::TOKEN_IDENT)
      | (1ULL << MyGrammarParser::RULE_IDENT)
      | (1ULL << MyGrammarParser::STRING)
      | (1ULL << MyGrammarParser::SET_TOK))) != 0));
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MyGrammarParser::POUND) {
      setState(73);
      alt_label();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentContext ------------------------------------------------------------------

MyGrammarParser::IdentContext::IdentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyGrammarParser::IdentContext::TOKEN_IDENT() {
  return getToken(MyGrammarParser::TOKEN_IDENT, 0);
}

tree::TerminalNode* MyGrammarParser::IdentContext::RULE_IDENT() {
  return getToken(MyGrammarParser::RULE_IDENT, 0);
}


size_t MyGrammarParser::IdentContext::getRuleIndex() const {
  return MyGrammarParser::RuleIdent;
}

void MyGrammarParser::IdentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdent(this);
}

void MyGrammarParser::IdentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdent(this);
}


antlrcpp::Any MyGrammarParser::IdentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitIdent(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::IdentContext* MyGrammarParser::ident() {
  IdentContext *_localctx = _tracker.createInstance<IdentContext>(_ctx, getState());
  enterRule(_localctx, 12, MyGrammarParser::RuleIdent);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!(_la == MyGrammarParser::TOKEN_IDENT

    || _la == MyGrammarParser::RULE_IDENT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rule_itemContext ------------------------------------------------------------------

MyGrammarParser::Rule_itemContext::Rule_itemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MyGrammarParser::Rule_itemContext::getRuleIndex() const {
  return MyGrammarParser::RuleRule_item;
}

void MyGrammarParser::Rule_itemContext::copyFrom(Rule_itemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Rule_dotContext ------------------------------------------------------------------

tree::TerminalNode* MyGrammarParser::Rule_dotContext::DOT() {
  return getToken(MyGrammarParser::DOT, 0);
}

MyGrammarParser::Rule_dotContext::Rule_dotContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_dotContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_dot(this);
}
void MyGrammarParser::Rule_dotContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_dot(this);
}

antlrcpp::Any MyGrammarParser::Rule_dotContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_dot(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rule_stringContext ------------------------------------------------------------------

tree::TerminalNode* MyGrammarParser::Rule_stringContext::STRING() {
  return getToken(MyGrammarParser::STRING, 0);
}

MyGrammarParser::Rule_stringContext::Rule_stringContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_stringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_string(this);
}
void MyGrammarParser::Rule_stringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_string(this);
}

antlrcpp::Any MyGrammarParser::Rule_stringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_string(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rule_setContext ------------------------------------------------------------------

tree::TerminalNode* MyGrammarParser::Rule_setContext::SET_TOK() {
  return getToken(MyGrammarParser::SET_TOK, 0);
}

MyGrammarParser::Rule_setContext::Rule_setContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_setContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_set(this);
}
void MyGrammarParser::Rule_setContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_set(this);
}

antlrcpp::Any MyGrammarParser::Rule_setContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_set(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rule_subContext ------------------------------------------------------------------

tree::TerminalNode* MyGrammarParser::Rule_subContext::LPAREN() {
  return getToken(MyGrammarParser::LPAREN, 0);
}

MyGrammarParser::Rule_defContext* MyGrammarParser::Rule_subContext::rule_def() {
  return getRuleContext<MyGrammarParser::Rule_defContext>(0);
}

tree::TerminalNode* MyGrammarParser::Rule_subContext::RPAREN() {
  return getToken(MyGrammarParser::RPAREN, 0);
}

MyGrammarParser::Rule_subContext::Rule_subContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_subContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_sub(this);
}
void MyGrammarParser::Rule_subContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_sub(this);
}

antlrcpp::Any MyGrammarParser::Rule_subContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_sub(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rule_punctContext ------------------------------------------------------------------

tree::TerminalNode* MyGrammarParser::Rule_punctContext::TILDE() {
  return getToken(MyGrammarParser::TILDE, 0);
}

MyGrammarParser::Rule_itemContext* MyGrammarParser::Rule_punctContext::rule_item() {
  return getRuleContext<MyGrammarParser::Rule_itemContext>(0);
}

tree::TerminalNode* MyGrammarParser::Rule_punctContext::PLUS() {
  return getToken(MyGrammarParser::PLUS, 0);
}

tree::TerminalNode* MyGrammarParser::Rule_punctContext::STAR() {
  return getToken(MyGrammarParser::STAR, 0);
}

tree::TerminalNode* MyGrammarParser::Rule_punctContext::QMARK() {
  return getToken(MyGrammarParser::QMARK, 0);
}

MyGrammarParser::Rule_punctContext::Rule_punctContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_punctContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_punct(this);
}
void MyGrammarParser::Rule_punctContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_punct(this);
}

antlrcpp::Any MyGrammarParser::Rule_punctContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_punct(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rule_commentContext ------------------------------------------------------------------

MyGrammarParser::Comment_blockContext* MyGrammarParser::Rule_commentContext::comment_block() {
  return getRuleContext<MyGrammarParser::Comment_blockContext>(0);
}

MyGrammarParser::Rule_commentContext::Rule_commentContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_commentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_comment(this);
}
void MyGrammarParser::Rule_commentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_comment(this);
}

antlrcpp::Any MyGrammarParser::Rule_commentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_comment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rule_identContext ------------------------------------------------------------------

MyGrammarParser::IdentContext* MyGrammarParser::Rule_identContext::ident() {
  return getRuleContext<MyGrammarParser::IdentContext>(0);
}

MyGrammarParser::Rule_identContext::Rule_identContext(Rule_itemContext *ctx) { copyFrom(ctx); }

void MyGrammarParser::Rule_identContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_ident(this);
}
void MyGrammarParser::Rule_identContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MyGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_ident(this);
}

antlrcpp::Any MyGrammarParser::Rule_identContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyGrammarVisitor*>(visitor))
    return parserVisitor->visitRule_ident(this);
  else
    return visitor->visitChildren(this);
}

MyGrammarParser::Rule_itemContext* MyGrammarParser::rule_item() {
   return rule_item(0);
}

MyGrammarParser::Rule_itemContext* MyGrammarParser::rule_item(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MyGrammarParser::Rule_itemContext *_localctx = _tracker.createInstance<Rule_itemContext>(_ctx, parentState);
  MyGrammarParser::Rule_itemContext *previousContext = _localctx;
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, MyGrammarParser::RuleRule_item, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyGrammarParser::TOKEN_IDENT:
      case MyGrammarParser::RULE_IDENT: {
        _localctx = _tracker.createInstance<Rule_identContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(79);
        ident();
        break;
      }

      case MyGrammarParser::STRING: {
        _localctx = _tracker.createInstance<Rule_stringContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(80);
        match(MyGrammarParser::STRING);
        break;
      }
